// Database Markup Language for ParkEase Project
// Generated from SQLAlchemy models

Project ParkEase {
  database_type: 'PostgreSQL' // Example, can be changed
  Note: 'Database schema for the ParkEase application.'
}

//// -----------------
//// Table Definitions
//// -----------------

Table user {
  id int [pk, increment]
  email varchar(120) [unique, not null]
  password varchar(128) [not null]
  fs_uniquifier varchar(64) [unique, not null, note: 'For Flask-Security token generation']
  active boolean [not null, default: true]
  is_flagged boolean [not null, default: false, note: 'Flagged by admin']
  first_name varchar(50)
  last_name varchar(50)
  username varchar(80) [unique, not null]
  phone_number varchar(15) [unique]
  address varchar(255)
  pincode varchar(10)
  google_chat_webhook varchar(500)
  created_at datetime [not null, default: `now()`]
}

Table role {
  id int [pk, increment]
  name varchar(80) [unique, not null]
  description varchar(255)
}

Table user_roles {
  id int [pk, increment]
  user_id int [not null]
  role_id int [not null]
}

Table parking_lot {
  id int [pk, increment]
  prime_location_name varchar(100)
  number_of_spots int
  price float
  address varchar(200)
  pincode varchar(10)
  available_from time [default: `'06:00:00'`]
  available_to time [default: `'22:00:00'`]
  is_active boolean [default: true]
}

Table parking_spot {
  id int [pk, increment]
  lot_id int
  spot_number int [not null]
  status varchar(1) [default: 'A', note: 'A=Available, O=Occupied']
}

Table vehicle {
  id int [pk, increment]
  user_id int
  vehicle_number varchar(20) [unique, not null]
  vehicle_name varchar(50) [not null]
  color varchar(20)
}

Table reservation {
  id int [pk, increment]
  spot_id int
  user_id int
  vehicle_id int
  booking_id varchar(50) [unique]
  booking_timestamp datetime [default: `now()`]
  expected_arrival datetime
  expected_departure datetime
  parking_timestamp datetime
  leaving_timestamp datetime
  status varchar(20) [default: 'Pending']
  parking_cost float
  cancellation_reason varchar(200)
}

Table payment {
  id int [pk, increment]
  reservation_id int [not null]
  amount float [not null]
  payment_method varchar(50)
  transaction_id varchar(100)
  payment_status varchar(20) [default: 'pending']
  payment_timestamp datetime [default: `now()`]
}

Table review {
  id int [pk, increment]
  user_id int [not null]
  parking_lot_id int [not null]
  rating int [not null, note: '1-5 stars']
  comment text
  created_at datetime [default: `now()`]
}

Table favorite {
  id int [pk, increment]
  user_id int [not null]
  lot_id int [not null]
  created_at datetime [default: `now()`]
  
  Indexes {
    (user_id, lot_id) [unique]
  }
}

Table task_log {
  id int [pk, increment]
  task_name varchar(100) [not null]
  status varchar(20) [not null]
  message text
  details json
  triggered_by varchar(50) [default: 'system']
  created_at datetime [default: `now()`]
}

//// --------------------
//// Relationship Definitions
//// --------------------

Ref: user.id < user_roles.user_id
Ref: role.id < user_roles.role_id

Ref: user.id < vehicle.user_id
Ref: user.id < reservation.user_id
Ref: user.id < review.user_id
Ref: user.id < favorite.user_id

Ref: parking_lot.id < parking_spot.lot_id
Ref: parking_lot.id < review.parking_lot_id
Ref: parking_lot.id < favorite.lot_id

Ref: parking_spot.id < reservation.spot_id
Ref: vehicle.id < reservation.vehicle_id
Ref: reservation.id < payment.reservation_id [one-to-many]